# bytetok

./: .gitignore  BENCHMARKS.MD  CHANGELOG.md  README.md  bench.py  bench_train_compare.py  encoding.vocab  main.py  pyproject.toml  test_parallel_speed.py  test_training.py  train.py  trainer_weighted_reference.rs
.github/workflows/: release.yaml
src/bytetok/: LICENSE  __init__.py  _bpe.py  _bpe_rs.pyi  _decorators.py  _factory.py  _progress.py  _sanitise.py  _trainer.py  base_tok.py  basic_tok.py  bpe.py  bytetok.ipynb  bytetok_p1.ipynb  errors.py  exceptions.py  factory.py  parallel.py  pattern.py  regex_tok.py  sanitise.py  strategy.py  tok.py  token-map.vocab  tokenizer.py  trainer.py  types.py
src/bytetok/_models/: __init__.py  base.py  basic.py  regex.py
src/bytetok/bpe/: Cargo.toml  __init__.py  __init__.pyi
src/bytetok/bpe/examples/: simple_merge.rs
src/bytetok/bpe/src/: bpe_encoder.rs  bpe_trainer.rs  converter.rs  encoder.rs  error.rs  lib.rs  tokenizer.rs  trainer.rs  trainer_weighted.rs  types.rs
src/bytetok/models/: base.py  basic.py  regex.py
src/bytetok/pretrained/: gpt4_tokenzier.py
src/bytetok/tokenizers/: __init__.py  base.py  basic.py  regex.py
tests/: __init__.py  test_tokenizer.py
