[project]
name = "bytetok"
version = "0.1.0"
description = "A modular byte-level BPE tokenizer library for rapid prototyping and research."
readme = "README.md"
license = { text = "MIT" }
classifiers = ["License :: OSI Approved :: MIT License"]
authors = [{ name = "Vihanga Malaviarachchi" }]
requires-python = ">=3.14"
dependencies = ["regex>=2026.1.15"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.optional-dependencies]

[project.scripts]
bytetok = "bytetok.tokenizers.basic:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "src/bytetok/bpe/Cargo.toml"
python-source = "src"
module-name = "bytetok._bpe_rs"

[dependency-groups]
dev = ["maturin>=1.11.5"]
