[project]
name = "bytetok"
version = "0.2.1"
description = "A fast, modular and light-weight BPE tokenizer for NLP research and prototyping."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [{ name = "Vihanga Malaviarachchi" }]
requires-python = ">=3.12"
dependencies = ["regex"]

keywords = ["bpe", "tokenizer", "nlp", "byte-pair-encoding"]

[project.urls]
Homepage = "https://github.com/VihangaFTW/bytetok"
Repository = "https://github.com/VihangaFTW/bytetok"
Issues = "https://github.com/VihangaFTW/bytetok/issues"

[tool.setuptools]
license-files = ["LICENSE"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "src/bytetok/bpe/Cargo.toml"
python-source = "src"
module-name = "bytetok._bpe_rs"

[dependency-groups]
dev = ["maturin>=1.11.5", "matplotlib", "pytest"]
